--- a/index.html
+++ b/index.html
@@ -91,5 +91,7 @@
 </section>
  </div>
 </section>
+                                                                      
+                                                                      <script href="script.js"></script>
     </body>
 </html>
